Closed Bug 1579261 Opened 5 years ago Closed 5 years ago

IsSameOriginWithAllParentDocs in MediaDevices.cpp probably doesn't work as expected in Fission

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Fission Milestone Future
Tracking Status
firefox79 --- fixed

People

(Reporter: hiro, Assigned: jib)

References

Details

Attachments

(1 file)

here. Since it uses GetCrossDocParentNode, it can't walk node tree across the cross-origin document boundaries.

Jan-Ivar, would you mind taking a first pass at triaging this?

Flags: needinfo?(jib)

Looks like this would affect our cross-origin getUserMedia and getDisplayMedia telemetry probes.

The fission meta bug is P3 so I used that.

Flags: needinfo?(jib)
Priority: -- → P3

When we circle back to this, we should evaluate if we have the data we wanted from the probes. If so, the probes and the function in question can be removed.

Tentatively moving all bugs whose summaries mention "Fission" (or other Fission-related keywords) but are not assigned to a Fission Milestone to the "?" triage milestone.

This will generate a lot of bugmail, so you can filter your bugmail for the following UUID and delete them en masse:

0ee3c76a-bc79-4eb2-8d12-05dc0b68e732

Fission Milestone: --- → ?

Tracking for Fission Nightly (M6)

What functionality is broken in Fission by this bug? kmag says this bug should be relatively easy to fix by walking the BrowsingContext tree.

Fission Milestone: ? → M6
Summary: IsSameOriginWithAllParentDocs in MediaDevices.cpp probably doesn't work as expected in fission → IsSameOriginWithAllParentDocs in MediaDevices.cpp probably doesn't work as expected in Fission
Priority: P3 → P2

Jan-Ivar, should this bug block shipping Fission MVP to Release? If so, should it also block enabling Fission in Nightly?

Flags: needinfo?(jib)

Feature policy has been enabled, so these probes have served out their purpose, and can be removed. I'll add a patch to remove them.

No longer blocks: fission
Flags: needinfo?(jib)

(In reply to Jan-Ivar Bruaroey [:jib] (needinfo? me) from comment #7)

Feature policy has been enabled, so these probes have served out their purpose, and can be removed. I'll add a patch to remove them.

Thanks. In that case, this bug doesn't need to block shipping Fission. :)

Fission Milestone: M6 → Future
Assignee: nobody → jib
Status: NEW → ASSIGNED
Pushed by jbruaroey@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7974edfa0a32 Remove getUserMedia, getDisplayMedia & mozGetUserMedia cross-origin probes. r=ng
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: