Bug 1579261 - Remove getUserMedia, getDisplayMedia & mozGetUserMedia cross-origin probes. r=ng

Differential Revision: https://phabricator.services.mozilla.com/D80769